OK, aqui eu mudei pra FX.
Arquivos do FX e finalmente as coisas vao ficar bonitas